--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.2.10",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "fuse.js": "^6.6.2",
+    "vue": "^3.2.13",
+    "vue-fuse": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
